--- a/bubble-view/pom.xml
+++ b/bubble-view/pom.xml
@@ -42,6 +42,7 @@
             <id>dev</id>
             <properties>
                 <profiles.activation>dev</profiles.activation>
+                <logger.dir>/Users/yanmingkun/IdeaProjects/opt/ymk/product/bubble/logs</logger.dir>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -150,6 +151,13 @@
         </plugins>
         <resources>
             <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+
+            <resource>
                 <directory>src/main/resources</directory>
 
                 <!-- **/*.properties 是指包括根目录或子目录所有properties类型的文件 -->
@@ -160,11 +168,12 @@
 
                 <!-- 排除dev、test目录下的文件 -->
                 <excludes>
-                    <exclude>dev/*</exclude>
-                    <exclude>pro/*</exclude>
-                    <exclude>test/*</exclude>
+                    <exclude>dev/**</exclude>
+                    <exclude>pro/**</exclude>
+                    <exclude>test/**</exclude>
                 </excludes>
-                <!--<filtering>true</filtering>-->
+                <!--去掉无法替换logback中的占位符-->
+                <filtering>true</filtering>
             </resource>
 
             <resource>
