--- a/bubble-component/bubble-component-codetools/pom.xml
+++ b/bubble-component/bubble-component-codetools/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>bubble-component-codetools</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.oschina.durcframework</groupId>
+            <artifactId>durcframework-core</artifactId>
+            <version>3.1.10</version>
+        </dependency>
+    </dependencies>
 
 </project>
