--- a/bubble-component/bubble-component-imageprocess/pom.xml
+++ b/bubble-component/bubble-component-imageprocess/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>filters</artifactId>
             <version>2.0.235</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
 </project>
