--- a/bubble-web/pom.xml
+++ b/bubble-web/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>bubble-component-schedule</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
