--- a/bubble-web/src/main/resources/application.properties
+++ b/bubble-web/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.password=bubble
 #mybatis
 mybatis.type-aliases-package=com.it.ymk.bubble.core.entity,com.it.ymk.bubble.component.schedule.entity
 mybatis.mapper-locations=classpath*:com/it/ymk/bubble/component/schedule/mapper/mysql/*Mapper.xml
+#
+spring.devtools.restart.exclude=static/**,public/**
+
