--- a/bubble-web/pom.xml
+++ b/bubble-web/pom.xml
@@ -33,9 +33,15 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.it.ymk</groupId>
+            <artifactId>bubble-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--依赖-->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -44,6 +50,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!--该配置必须-->
+                    <fork>true</fork>
+                </configuration>
             </plugin>
         </plugins>
     </build>
