--- a/bubble-web/src/main/resources/application-dev.properties
+++ b/bubble-web/src/main/resources/application-dev.properties
@@ -2,7 +2,6 @@ server.port=8090
 server.servlet.context-path=/bubble
 # profiles 配置
 #spring.profiles.active=dev
-
 #日志级别从低到高分为TRACE < DEBUG < INFO < WARN < ERROR < FATAL，如果设置为WARN，则低于WARN的信息都不会输出
 logging.level.root=DEBUG
 logging.path=/Users/yanmingkun/IdeaProjects/opt/ymk/product/bubble/logs
@@ -16,4 +15,15 @@ mybatis.type-aliases-package=com.it.ymk.bubble.core.entity,com.it.ymk.bubble.com
 mybatis.mapper-locations=classpath*:com/it/ymk/bubble/component/schedule/mapper/mysql/*Mapper.xml
 #devtools 重启配置
 spring.devtools.restart.exclude=static/**,public/**
+#
+spring.jpa.database=mysql
+spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=com.it.ymk.bubble.config.MySQL5DialectUTF8
+# 是否开启thymeleaf缓存
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+# 是否开启freemarker缓存
+spring.freemarker.cache=false
+
 
