--- a/bubble-web/pom.xml
+++ b/bubble-web/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>com.it.ymk</groupId>
+            <artifactId>bubble-component-shiro</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.it.ymk</groupId>
             <artifactId>bubble-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
