--- a/bubble-web/src/main/resources/application.properties
+++ b/bubble-web/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# profiles 配置
 spring.profiles.active=dev
-
-
+#应用上下文
+server.servlet.context-path=/bubble
+#mybatis 配置
+mybatis.type-aliases-package=com.it.ymk.bubble.core.entity,com.it.ymk.bubble.component.schedule.entity
+mybatis.mapper-locations=classpath*:com/it/ymk/bubble/component/schedule/mapper/mysql/*Mapper.xml
