--- a/bubble-web/src/main/resources/application-dev.properties
+++ b/bubble-web/src/main/resources/application-dev.properties
@@ -1,7 +1,4 @@
 server.port=8090
-server.servlet.context-path=/bubble
-# profiles 配置
-#spring.profiles.active=dev
 #日志级别从低到高分为TRACE < DEBUG < INFO < WARN < ERROR < FATAL，如果设置为WARN，则低于WARN的信息都不会输出
 logging.level.root=DEBUG
 logging.path=/Users/yanmingkun/IdeaProjects/opt/ymk/product/bubble/logs
@@ -10,12 +7,9 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.1.10:3306/bubble?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=bubble
 spring.datasource.password=bubble
-#mybatis 配置
-mybatis.type-aliases-package=com.it.ymk.bubble.core.entity,com.it.ymk.bubble.component.schedule.entity
-mybatis.mapper-locations=classpath*:com/it/ymk/bubble/component/schedule/mapper/mysql/*Mapper.xml
 #devtools 重启配置
 spring.devtools.restart.exclude=static/**,public/**
-#
+#jpa 配置
 spring.jpa.database=mysql
 spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
