Modify 集成 redis 和 session 共享

--- a/bubble-web/src/main/resources/application-prod.properties
+++ b/bubble-web/src/main/resources/application-prod.properties
@@ -19,3 +19,12 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 # 是否开启freemarker缓存
 spring.freemarker.cache=false
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+spring.redis.database=0  
+# Redis服务器地址
+spring.redis.host=10.12.12.107
+# Redis服务器连接端口
+spring.redis.port=6379  
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
