--- a/bubble-web/pom.xml
+++ b/bubble-web/pom.xml
@@ -52,6 +52,12 @@
 
     <build>
         <plugins>
+            <!--Generate Git Information-->
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+            </plugin>
+            <!--Spring boot maven plugin-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
