--- a/bubble-web/src/main/resources/application-dev.properties
+++ b/bubble-web/src/main/resources/application-dev.properties
@@ -36,3 +36,17 @@ spring.redis.host=10.12.12.107
 spring.redis.port=6379  
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
+#配置健康检查
+#监控所有的接口
+management.endpoints.web.exposure.include=*
+#自定义actuator端口
+management.server.port=8088
+#管理上下文
+management.server.servlet.context-path=/monitor
+#web 上下文
+management.endpoints.web.base-path=
+management.server.ssl.enabled=false
+management.endpoint.health.show-details=always
+management.endpoint.shutdown.enabled=true
+#只允许本机连接，禁止远程管理
+#management.server.address=127.0.0.1
