--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,12 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
+        <!--自省和监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
