--- a/bubble-component/bubble-component-schedule/pom.xml
+++ b/bubble-component/bubble-component-schedule/pom.xml
@@ -16,6 +16,17 @@
             <artifactId>bubble-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--定时任务-->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz-jobs</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
