--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
@@ -21,7 +21,7 @@ spring.jpa.show_sql=true
 #update：最常用的属性，第一次加载hibernate时根据model类会自动建立起表的结构（前提是先建立好数据库），以后加载hibernate时根据 model类自动更新表结构，即使表结构改变了但表中的行仍然存在不会删除以前的行。要注意的是当部署到服务器后，表结构是不会被马上建立起来的，是要等 应用第一次运行起来后才会。
 #validate ：每次加载hibernate时，验证创建数据库表结构，只会和数据库中的表进行比较，不会创建新表，但是会插入新值。 5、 none : 什么都不做。
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=com.it.ymk.bubble.springboot.web.config.MySQL5DialectUTF8
+spring.jpa.database-platform=com.it.ymk.bubble.config.MySQL5DialectUTF8
 # 是否开启thymeleaf缓存
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
@@ -50,3 +50,5 @@ management.endpoint.health.show-details=always
 management.endpoint.shutdown.enabled=true
 #只允许本机连接，禁止远程管理
 #management.server.address=127.0.0.1
+#admin 管理
+spring.boot.admin.client.url=http://localhost:8000
