--- a/bubble-springboot/bubble-springboot-web/src/main/resources/quartz.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/quartz.properties
@@ -2,6 +2,7 @@
 # Configure Main Scheduler Properties
 #============================================================================
 org.quartz.scheduler.instanceName=org.quartz.scheduler.instanceId = DefaultQuartzScheduler
+org.quartz.scheduler.instanceId=AUTO 
 org.quartz.scheduler.rmi.export=false
 org.quartz.scheduler.rmi.proxy=false
 org.quartz.scheduler.wrapJobExecutionInUserTransaction=false
@@ -16,6 +17,7 @@ org.quartz.threadPool.threadCount=10
 # 优先级
 org.quartz.threadPool.threadPriority=5
 org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
+org.quartz.jobStore.misfireThreshold=5000
 #============================================================================
 # Configure Plugins
 #============================================================================
@@ -26,17 +28,25 @@ org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
 #org.quartz.plugin.jobInitializer.failOnFileNotFound=true
 #per 24 hour to check whether quartz_jobs.xml is updated
 #org.quartz.plugin.jobInitializer.scanInterval=86400
+#============================================================================
 #持久化
+#============================================================================
 org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.misfireThreshold=5000
 org.quartz.jobStore.tablePrefix=QRTZ_
-org.quartz.jobStore.dataSource=myDS
-org.quartz.dataSource.myDS.driver=com.mysql.jdbc.Driver   
-org.quartz.dataSource.myDS.URL=jdbc:mysql://192.168.1.10:3306/bubble
-org.quartz.dataSource.myDS.user=bubble   
-org.quartz.dataSource.myDS.password=bubble   
-org.quartz.dataSource.myDS.maxConnections=10
+org.quartz.jobStore.clusterCheckinInterval=15000  
+org.quartz.jobStore.isClustered=true
+#============================================================================
+#数据源
+#============================================================================
+#org.quartz.jobStore.dataSource=myDS
+#org.quartz.dataSource.myDS.driver=com.mysql.jdbc.Driver
+#org.quartz.dataSource.myDS.URL=jdbc:mysql://192.168.1.10:3306/bubble
+#org.quartz.dataSource.myDS.user=bubble
+#org.quartz.dataSource.myDS.password=bubble
+#org.quartz.dataSource.myDS.maxConnections=10
+#============================================================================
 #配置trigger执行历史日志（可以看到类的文档和参数列表）
+#============================================================================
 org.quartz.plugin.triggHistory.class=org.quartz.plugins.history.LoggingTriggerHistoryPlugin
 org.quartz.plugin.triggHistory.triggerFiredMessage=Trigger {1}.{0} fired job {6}.{5} at: {4, date, HH:mm:ss MM/dd/yyyy}
 org.quartz.plugin.triggHistory.triggerCompleteMessage=Trigger {1}.{0} completed firing job {6}.{5} at {4, date, HH:mm:ss MM/dd/yyyy} with resulting trigger instruction code: {9}
