--- a/bubble-springboot/pom.xml
+++ b/bubble-springboot/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>bubble-springboot-web</module>
+        <module>bubble-springboot-admin</module>
     </modules>
 
     <dependencies>
