--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- 基本信息 -->
     <description>SpringBoot bubble多模块构建</description>
     <modelVersion>4.0.0</modelVersion>
-    <name>springboot-bubble</name>
+    <name>bubble</name>
     <packaging>pom</packaging>
 
     <groupId>com.it.ymk</groupId>
