--- a/bubble-springboot/bubble-springboot-web/pom.xml
+++ b/bubble-springboot/bubble-springboot-web/pom.xml
@@ -15,7 +15,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <docker.image.prefix>bubble-springboot</docker.image.prefix>
+        <docker.image.prefix>wondershoter</docker.image.prefix>
         <!--set the following false to make images-->
         <docker.skip.build>false</docker.skip.build>
     </properties>
@@ -80,12 +80,17 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
-            <!-- Docker maven plugin 执行：mvn package docker:build -->
+            <!-- 编译、打包Docker镜像并push到DockerHub上
+                 Docker maven plugin：docker的maven插件，dockerfile-maven的前身
+                 官网：https://github.com/spotify/docker-maven-plugin
+                 执行：mvn package docker:build，mvn docker:push
+            -->
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.1.1</version>
                 <!--插件绑定到phase-->
+                <!--用户只需要执行mvn install ，就自动执行了mvn docker:build-->
                 <executions>
                     <execution>
                         <phase>install</phase>
@@ -97,6 +102,10 @@
                 <configuration>
                     <!--配置变量，包括是否build、imageName、imageTag，非常灵活-->
                     <skipDocker>${docker.skip.build}</skipDocker>
+                    <!-- 注意imageName一定要是符合正则[a-z0-9-_.]的，否则构建不会成功 -->
+                    <!-- 详见：https://github.com/spotify/docker-maven-plugin Invalid repository
+			             name ... only [a-z0-9-_.] are allowed -->
+                    <!-- 如果要将docker镜像push到DockerHub上去的话，这边的路径要和repo路径一致 -->
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <!--最后镜像产生了两个tag，版本和和最新的-->
                     <imageTags>
@@ -112,6 +121,7 @@
                         <run>ln -snf /usr/share/zoneinfo/$TZ /etc/localtime</run>
                         <run>echo $TZ > /etc/timezone</run>
                     </runs>
+                    <!-- 指定Dockerfile所在的路径 -->
                     <dockerDirectory>src/main/docker</dockerDirectory>
                     <!--<dockerDirectory>${project.basedir}</dockerDirectory>-->
                     <resources>
@@ -121,11 +131,16 @@
                             <include>${project.build.finalName}.jar</include>
                         </resource>
                     </resources>
-                    <!--push到私有的hub-->
-                    <!--<serverId>docker-registry</serverId>-->
+                    <!--push到DockerHub，serverId配置在MAVEN setting.xml servers 节点下下-->
+                    <serverId>docker-hub</serverId>
+                    <registryUrl>https://index.docker.io/v1/</registryUrl>
                 </configuration>
             </plugin>
-            <!-- Docker maven plugin -->
+            <!-- 编译、打包Docker镜像并push到DockerHub上
+                 dockerfile-maven：docker的maven插件，推荐
+                 官网：https://github.com/spotify/dockerfile-maven
+                 执行： mvn dockerfile:build,mvn dockerfile:push
+            -->
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
@@ -136,18 +151,22 @@
                         <id>default</id>
                         <goals>
                             <goal>build</goal>
-                            <!--<goal>push</goal>-->
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
                     <contextDirectory>${project.basedir}</contextDirectory>
-                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
+
                     <tag>${project.version}</tag>
                     <tag>latest</tag>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
+                    <!--指定了远程镜像地址，这个在 Docker Hub 中是唯一的-->
+                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
+                    <!--<repository>wondershoter/bubble-springboot</repository>-->
+                    <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
                 </configuration>
             </plugin>
         </plugins>
