--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
@@ -51,4 +51,4 @@ management.endpoint.shutdown.enabled=true
 #只允许本机连接，禁止远程管理
 #management.server.address=127.0.0.1
 #admin 管理
-spring.boot.admin.client.url=http://localhost:8000
+spring.boot.admin.client.url=http://192.168.1.10:8000
