--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
@@ -37,6 +37,9 @@ spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
 #配置健康检查
+#监控所有的接口
+management.endpoints.web.exposure.include=*
+#自定义actuator端口
 management.server.port=8088
 #管理上下文
 management.server.servlet.context-path=/monitor
@@ -48,4 +51,4 @@ management.endpoint.shutdown.enabled=true
 #只允许本机连接，禁止远程管理
 management.server.address=127.0.0.1
 #admin 管理
-spring.boot.admin.url=http://127.0.0.1:8000  
+spring.boot.admin.client.url=http://192.168.1.10:8000  
