--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8090
 #日志级别从低到高分为TRACE < DEBUG < INFO < WARN < ERROR < FATAL，如果设置为WARN，则低于WARN的信息都不会输出
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.path=/Users/yanmingkun/IdeaProjects/opt/ymk/product/bubble/logs
 #数据源配置
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
