--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
@@ -35,7 +35,7 @@ spring.redis.host=10.12.12.107
 # Redis服务器连接端口
 spring.redis.port=6379  
 # Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=redis_sax
 #配置健康检查
 #监控所有的接口
 management.endpoints.web.exposure.include=*
