--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 # profiles 配置
 spring.profiles.active=dev
+
 #应用上下文
 server.servlet.context-path=/bubble
 #mybatis 配置
 mybatis.type-aliases-package=com.it.ymk.bubble.core.entity,com.it.ymk.bubble.component.schedule.entity
 mybatis.mapper-locations=classpath*:com/it/ymk/bubble/component/schedule/mapper/mysql/*Mapper.xml
+#spring.output.ansi.enabled 有三个候选项
+#
+#NEVER：禁用 ANSI-colored 输出（默认项）
+#DETECT：会检查终端是否支持 ANSI，是的话就采用彩色输出（推荐项）
+#ALWAYS：总是使用 ANSI-colored 格式输出，若终端不支持的时候，会有很多干扰信息，不推荐使用
+spring.output.ansi.enabled=detect
