--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
@@ -1,4 +1,7 @@
 server.port=8090
+### 是否显示banner，可选值[console|log|off]
+spring.main.banner-mode=off
+
 #日志级别从低到高分为TRACE < DEBUG < INFO < WARN < ERROR < FATAL，如果设置为WARN，则低于WARN的信息都不会输出
 logging.level.root=INFO
 logging.path=/Users/yanmingkun/IdeaProjects/opt/ymk/product/bubble/logs
