--- a/bubble-springboot/bubble-springboot-web/pom.xml
+++ b/bubble-springboot/bubble-springboot-web/pom.xml
@@ -47,6 +47,11 @@
         </dependency>
         <dependency>
             <groupId>com.it.ymk</groupId>
+            <artifactId>bubble-component-manage</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.it.ymk</groupId>
             <artifactId>bubble-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
