--- a/pom.xml
+++ b/pom.xml
@@ -292,13 +292,19 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.2</version>
         </dependency>
         <!--添加Swagger-UI依赖 -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.2</version>
+        </dependency>
+        <!-- Swagger增强UI实现 地址：https://github.com/xiaoymin/Swagger-Bootstrap-UI -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.8.8</version>
         </dependency>
 
         <!--Swagger和OperaDriver冲突-->
