--- a/bubble-springcloud/pom.xml
+++ b/bubble-springcloud/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bubble-springcloud</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>bubble-springcloud-eureka</module>
+    </modules>
 
 
 </project>
