--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # profiles 配置
 spring.profiles.active=dev
+spring.application.name=bubble-springboot-web
 
 #应用上下文
 server.servlet.context-path=/bubble
