--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-dev.properties
@@ -55,3 +55,7 @@ management.endpoint.shutdown.enabled=true
 #management.server.address=127.0.0.1
 #admin 管理
 spring.boot.admin.client.url=http://192.168.1.10:8000
+#eureka
+eureka.client.security.basic.user=eureka
+eureka.client.security.basic.password=123456
+eureka.client.serviceUrl[defaultZone]=http://${eureka.client.security.basic.user}:${eureka.client.security.basic.password}@localhost:9000/eureka
