--- a/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/application-prod.properties
@@ -54,4 +54,8 @@ management.endpoint.shutdown.enabled=true
 #只允许本机连接，禁止远程管理
 management.server.address=127.0.0.1
 #admin 管理
-spring.boot.admin.client.url=http://192.168.1.10:8000  
+spring.boot.admin.client.url=http://192.168.1.10:8000\
+#eureka
+eureka.client.security.basic.user=eureka
+eureka.client.security.basic.password=123456
+eureka.client.serviceUrl[defaultZone]=http://${eureka.client.security.basic.user}:${eureka.client.security.basic.password}@localhost:9000/eureka  
