--- a/bubble-springboot/bubble-springboot-web/pom.xml
+++ b/bubble-springboot/bubble-springboot-web/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>bubble-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <!--数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.23</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.32</version>
+        </dependency>
         <!--依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -73,6 +84,8 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
