--- a/bubble-component/bubble-component-log/pom.xml
+++ b/bubble-component/bubble-component-log/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>bubble-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
