--- a/bubble-component/bubble-component-manage/pom.xml
+++ b/bubble-component/bubble-component-manage/pom.xml
@@ -17,6 +17,12 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.it.ymk</groupId>
+            <artifactId>bubble-common-template</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
