--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>bubble-component</module>
         <module>bubble-springcloud</module>
         <module>bubble-springboot</module>
+        <module>bubble-common</module>
     </modules>
 
     <properties>
@@ -32,7 +33,7 @@
         <maven.test.skip>true</maven.test.skip>
         <cxf.version>3.2.6</cxf.version>
         <jackson.version>2.9.8</jackson.version>
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <!--<project.deploy.directory>${env.RELEASE_HOME}</project.deploy.directory>-->
     </properties>
@@ -167,11 +168,25 @@
             </dependency>
             <!-- 天猫抓取以来 -->
 
+            <!--模版解析freemarker、freemarker、thymeleaf-->
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>2.3.28</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf-spring5</artifactId>
+                <version>3.0.9.RELEASE</version>
+                <scope>compile</scope>
+            </dependency>
             <!-- velocity -->
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
                 <version>1.7</version>
+                <scope>compile</scope>
             </dependency>
 
             <!-- json工具 -->
@@ -199,6 +214,12 @@
                 <version>1.2.47</version>
             </dependency>
             <!-- json工具 -->
+            <!--gson json解析工具-->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.5</version>
+            </dependency>
 
             <!--添加Swagger依赖 -->
             <dependency>
@@ -283,11 +304,18 @@
                 <version>3.2.6</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>3.5.1</version>
+                <scope>compile</scope>
+            </dependency>
+
             <!-- Spring Boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>2.0.4.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -298,6 +326,25 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.8.13</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <!--定时任务-->
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>2.2.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-jobs</artifactId>
+                <version>2.2.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
